# navigator-notify

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  semver.yml
notify/: main.py  slack.py
