[tool.poetry]
name = "navigator-notify"
version = "0.1.0"
description = ""
authors = ["olaughter <fred@climatepolicyradar.org>"]
readme = "README.md"
packages = [{include = "notify"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^4.0.1"
slack-sdk = "^3.33.2"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
navigator-notify = 'notify.main:main'

[tool.pyright]
include = ["notify"]
