[tool.poetry]
name = "navigator-notify"
version = "0.1.0"
description = ""
authors = ["olaughter <fred@climatepolicyradar.org>"]
readme = "README.md"
packages = [{include = "notify"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^4.2.0"
slack-sdk = "^3.35.0"
click = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
navigator-notify = 'notify.main:main'

[tool.pyright]
include = ["notify"]
